--- a/mainReact/index.html
+++ b/mainReact/index.html
@@ -2,11 +2,13 @@
 <html lang="es">
   
   <head>
+    <!-- Meta -->
     <meta charset="UTF-8" />
-    <!-- <link rel="icon" type="image/png" href="https://website.menu.app/app/uploads/sites/5/favicon.png"> -->
-    <link rel="icon" type="image/png" href="./src/ProyectoFinal/assets/gigames.png">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- Title -->
     <title>GiGames</title>
+    <!-- Icon -->
+    <link rel="icon" type="image/png" href="./src/ProyectoFinal/assets/gigames.png">
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-T3c6CoIi6uLrA9TneNEoa7RxnatzjcDSCmG1MXxSR1GAsXEV/Dwwykc2MPK8M2HN" crossorigin="anonymous">
   </head>
